fix(compiler): remove `formatted` string feature